Table users {
  id serial [pk]
  name varchar [not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  role user_role [default: 'freelancer']
  avatar varchar
  bio text
  skills text[]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table categories {
  id serial [pk]
  name varchar [not null]
  slug varchar [unique, not null]
  description text
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table jobs {
  id serial [pk]
  employer_id integer [not null]
  category_id integer
  title varchar [not null]
  description text [not null]
  budget_min decimal
  budget_max decimal
  deadline date
  status job_status [default: 'open']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table applications {
  id serial [pk]
  job_id integer [not null]
  freelancer_id integer [not null]
  name varchar [not null]
  resume_url varchar
  cover_letter text [not null]
  status application_status [default: 'pending']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table contracts {
  id serial [pk]
  job_id integer [not null]
  employer_id integer [not null]
  freelancer_id integer [not null]
  application_id integer [not null]
  start_date timestamptz [default: `CURRENT_TIMESTAMP`]
  end_date timestamptz
  status contract_status [default: 'active']
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table notifications {
  id serial [pk]
  user_id integer [not null]
  type varchar [not null]
  message text [not null]
  link varchar
  read boolean [default: false]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table reviews {
  id serial [pk]
  contract_id integer [not null]
  reviewer_id integer [not null]
  reviewee_id integer [not null]
  rating integer [not null]
  comment text
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Ref: jobs.employer_id > users.id [delete: cascade]
Ref: jobs.category_id > categories.id [delete: set null]
Ref: applications.job_id > jobs.id [delete: cascade]
Ref: applications.freelancer_id > users.id [delete: cascade]
Ref: contracts.job_id > jobs.id [delete: cascade]
Ref: contracts.employer_id > users.id [delete: cascade]
Ref: contracts.freelancer_id > users.id [delete: cascade]
Ref: contracts.application_id > applications.id [delete: cascade]
Ref: notifications.user_id > users.id [delete: cascade]
Ref: reviews.contract_id > contracts.id [delete: cascade]
Ref: reviews.reviewer_id > users.id [delete: cascade]
Ref: reviews.reviewee_id > users.id [delete: cascade]
